Update model paths and add new notebook
- Changed model loading paths to point to CPU versions
- Updated .gitignore to allow for subdirectories
- Added volume mapping in deployment configuration
- Introduced a new notebook for moving models to CPU

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-notebooks/helper/even-layers-distillation/
-notebooks/helper/low-rank-adaptation/
-notebooks/helper/odd-layers-distillation/
-app/models/final-model/
+notebooks/helper/even-layers-distillation*/
+notebooks/helper/low-rank-adaptation*/
+notebooks/helper/odd-layers-distillation*/
+app/models/final-model*/
